--- a/package.json
+++ b/package.json
@@ -18,29 +18,25 @@
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
     "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
-    "docs": "text-runner --offline --format=dot",
-    "fix": "dprint fmt && eslint --ext=.ts --fix .",
-    "lint": "eslint --ext=.ts . && dprint check && tsc --noEmit && tools/actionlint",
+    "docs": "text-runner",
+    "fix": "dprint fmt && eslint --fix",
+    "lint": "tsc --noEmit && eslint && dprint check && tools/actionlint",
     "prepublishOnly": "npm run build",
     "setup": "curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash | bash && mkdir -p tools && mv actionlint tools",
-    "test": "npm run build && npm run lint && npm run unit && npm run docs",
+    "test": "npm run build && npm run fix && npm run lint && npm run unit && npm run docs",
     "unit": "mocha --reporter dot test/*.ts",
     "update": "npm-check-updates -u && npm install"
   },
   "devDependencies": {
+    "@eslint/js": "9.22.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.3",
     "@types/mocha": "9.1.1",
     "@types/node": "18.7.11",
-    "@typescript-eslint/eslint-plugin": "5.34.0",
-    "@typescript-eslint/parser": "5.34.0",
     "coveralls": "3.1.1",
     "dprint": "0.49.0",
-    "eslint": "8.22.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-typescript-sort-keys": "2.1.0",
+    "eslint": "9.22.0",
+    "eslint-plugin-perfectionist": "4.10.1",
     "memory-streams": "0.1.3",
     "mocha": "10.0.0",
     "npm-check-updates": "17.1.15",
@@ -51,6 +47,7 @@
     "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.26.1"
   }
 }
