--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "clean": "rm -rf dist",
     "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
     "docs": "text-runner",
-    "fix": "dprint fmt && eslint --fix",
-    "lint": "tsc --noEmit && eslint && dprint check && tools/actionlint",
+    "fix": "sort-package-json --quiet && dprint fmt && eslint --fix",
+    "lint": "tsc --noEmit && eslint && dprint check && sort-package-json --check --quiet && tools/actionlint",
     "prepublishOnly": "npm run build",
     "setup": "curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash | bash && mkdir -p tools && mv actionlint tools",
     "test": "npm run build && npm run fix && npm run lint && npm run unit && npm run docs",
@@ -41,6 +41,7 @@
     "mocha": "10.0.0",
     "npm-check-updates": "17.1.15",
     "nyc": "15.1.0",
+    "sort-package-json": "3.0.0",
     "source-map-support": "0.5.21",
     "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
