--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,5 @@ jobs:
       - run: npm install
         if: steps.cache-node.outputs.cache-hit != 'true'
       - run: echo "./node_modules/.bin" >> "$GITHUB_PATH"
+      - run: npm run setup
       - run: npm run test
