--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "source-map-support": "0.5.21",
     "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
-    "ts-node": "10.9.1",
+    "tsx": "^4.19.3",
     "typescript": "5.8.2",
     "typescript-eslint": "8.26.1"
   }
