--- a/package.json
+++ b/package.json
@@ -16,28 +16,26 @@
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
-    "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
+    "coverage": "nyc node --test --import tsx test/*.test.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
     "docs": "text-runner",
     "fix": "sort-package-json --quiet && dprint fmt && eslint --fix",
     "lint": "tsc --noEmit && eslint && dprint check && sort-package-json --check --quiet && tools/actionlint",
     "prepublishOnly": "npm run build",
     "setup": "curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash | bash && mkdir -p tools && mv actionlint tools",
     "test": "npm run build && npm run fix && npm run lint && npm run unit && npm run docs",
-    "unit": "mocha --reporter dot test/*.ts",
+    "unit": "node --test --import tsx test/*.test.ts",
     "update": "npm-check-updates -u && npm install"
   },
   "devDependencies": {
     "@eslint/js": "9.22.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.3",
-    "@types/mocha": "9.1.1",
     "@types/node": "22.13.10",
     "coveralls": "3.1.1",
     "dprint": "0.49.0",
     "eslint": "9.22.0",
     "eslint-plugin-perfectionist": "4.10.1",
     "memory-streams": "0.1.3",
-    "mocha": "10.0.0",
     "npm-check-updates": "17.1.15",
     "nyc": "15.1.0",
     "sort-package-json": "3.0.0",
