--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
-    "coverage": "nyc node --test --import tsx test/*.test.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
+    "coverage": "node --test --import tsx --experimental-test-coverage --test-reporter=lcov test/*.test.ts | coveralls",
     "docs": "text-runner",
     "fix": "sort-package-json --quiet && dprint fmt && eslint --fix",
     "lint": "tsc --noEmit && eslint && dprint check && sort-package-json --check --quiet && tools/actionlint",
@@ -28,7 +28,6 @@
   },
   "devDependencies": {
     "@eslint/js": "9.22.0",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.3",
     "@types/node": "22.13.10",
     "coveralls": "3.1.1",
@@ -37,9 +36,7 @@
     "eslint-plugin-perfectionist": "4.10.1",
     "memory-streams": "0.1.3",
     "npm-check-updates": "17.1.15",
-    "nyc": "15.1.0",
     "sort-package-json": "3.0.0",
-    "source-map-support": "0.5.21",
     "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
     "tsx": "4.19.3",
