--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
-    "coverage": "node --test --import tsx --experimental-test-coverage --test-reporter=lcov test/*.test.ts | coveralls",
+    "coverage": "node --test --import tsx --experimental-test-coverage --test-reporter=lcov --test-reporter-destination=lcov.info test/*.test.ts",
     "docs": "text-runner",
     "fix": "sort-package-json --quiet && dprint fmt && eslint --fix",
     "lint": "tsc --noEmit && eslint && dprint check && sort-package-json --check --quiet && tools/actionlint",
@@ -29,7 +29,6 @@
   "devDependencies": {
     "@eslint/js": "9.22.0",
     "@types/node": "22.13.10",
-    "coveralls": "3.1.1",
     "dprint": "0.49.0",
     "eslint": "9.22.0",
     "eslint-plugin-perfectionist": "4.10.1",
