--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
     "coverage": "node --test --import tsx --experimental-test-coverage --test-reporter=lcov --test-reporter-destination=lcov.info test/*.test.ts",
-    "docs": "text-runner",
+    "doc": "text-runner",
     "fix": "sort-package-json --quiet && dprint fmt && eslint --fix",
     "lint": "tsc --noEmit && eslint && dprint check && sort-package-json --check --quiet && tools/actionlint",
     "prepublishOnly": "npm run build",
     "setup": "curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash | bash && mkdir -p tools && mv actionlint tools",
-    "test": "npm run build && npm run fix && npm run lint && npm run unit && npm run docs",
+    "test": "npm run build && npm run fix && npm run lint && npm run unit && npm run doc",
     "unit": "node --test --import tsx test/*.test.ts",
     "update": "npm-check-updates -u && npm install"
   },
